# api-playground

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt  tox.ini
benchmarks/: litestar-msgspc.md  litestar-pydantic.md
benchmarks/fastapi/: pydantic-roundtrip.md  pydantic.md
benchmarks/litestar/: msgspc-roundtrip.md  msgspc.md  pydantic-roundtrip.md  pydantic.md
scripts/: run_fastapi.py  run_litestar.py
src/playground/: __version__.py
src/playground/fastapi_app/: app.py  routes.py
src/playground/litestar_app/: app.py  dto.py  routes.py
src/playground/models/: msgspec.py  pydantic.py
